<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login_gradient">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitStart"
        android:src="@mipmap/bg_login" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <ImageView
            android:id="@+id/chat_iv_logo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:src="@mipmap/icon_login_head" />

        <LinearLayout
            android:id="@+id/ll_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/chat_iv_logo"
            android:layout_marginTop="50dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingBottom="5dp"
                    android:text="+86"
                    android:textColor="@color/basic_white"
                    android:textSize="18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/basic_white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="14dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/login_tips_input_phone"
                    android:inputType="phone"
                    android:maxLength="13"
                    android:paddingBottom="5dp"
                    android:textColor="@color/basic_white"
                    android:textColorHint="@color/basic_white" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/basic_white" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_code"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/ll_phone"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="15dp"
            android:gravity="center_vertical">

            <com.fuzamei.common.widget.VerifyEditText
                android:id="@+id/et_code"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:cursorVisible="false"
                android:gravity="center_vertical"
                android:hint="@string/login_tips_input_code"
                android:inputType="number"
                android:singleLine="true"
                android:textColor="@color/basic_white"
                android:textColorHint="@color/basic_white"
                android:textSize="18sp"
                app:intervalLength="14" />

            <TextView
                android:id="@+id/tv_get_code"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:background="@drawable/bg_round_white_hollow_20"
                android:gravity="center"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingRight="15dp"
                android:paddingBottom="10dp"
                android:singleLine="true"
                android:text="@string/login_action_send_code"
                android:textColor="@color/basic_white"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_user_protocol"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/ll_code"
            android:gravity="center_vertical">

            <CheckBox
                android:id="@+id/cb_select"
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:button="@drawable/login_checkbox"
                android:checked="true"
                android:padding="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_tip_read"
                android:textColor="@color/basic_white" />

            <TextView
                android:id="@+id/tv_protocol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_tip_protocol"
                android:textColor="@color/basic_text_blue_light" />
        </LinearLayout>

        <TextView
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/ll_user_protocol"
            android:background="@drawable/bg_round_white_solid_20"
            android:gravity="center"
            android:text="@string/login_action_login"
            android:textColor="@color/basic_text_accent"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="50dp"
            android:text="@string/application_name"
            android:textColor="@color/basic_white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>
</FrameLayout>
